<?xml version="1.1" encoding="utf-8"?>

<!--

strings.xml in FtcRobotController

Copyright (c) 2014, 2015 Qualcomm Technologies Inc
Copyright (c) 2020, 2021 Brendan Berger (elburg)

All rights reserved.

Redistribution and use in source and binary forms, with or without modification,
are permitted (subject to the limitations in the disclaimer below) provided that
the following conditions are met:

Redistributions of source code must retain the above copyright notice, this list
of conditions and the following disclaimer.

Redistributions in binary form must reproduce the above copyright notice, this
list of conditions and the following disclaimer in the documentation and/or
other materials provided with the distribution.

Neither the name of Qualcomm Technologies Inc nor the names of its contributors
may be used to endorse or promote products derived from this software without
specific prior written permission.

NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<resources>
    <string name="app_name">FTC RC Mark II (Modified)</string>
    <string name="inspection_mode_menu_item">📝 Self Inspect</string>
    <string name="program_and_manage_menu_item">⚡ Program &amp; Manage</string>
    <string name="blocks_menu_item">☲ Blocks</string>
    <string name="settings_menu_item">⚙️ Settings</string>
    <string name="restart_robot_menu_item">↺ Restart Robot</string>
    <string name="configure_robot_menu_item">🛠 Configure Robot</string>
    <string name="about_menu_item">ℹ ️About</string>
    <string name="exit_menu_item">❌ Exit</string>
    <string name="toastWifiConfigurationComplete">✔ ️Configuration Complete!</string>
    <string name="toastRestartingRobot">Restarting Robot… Please Wait…</string>
    <string name="toastWifiUpBeforeProgrammingMode">⚠ ️The Robot Controller must be fully up and running before entering Program and Manage Mode.</string>
    <string name="packageName">@string/packageNameRobotController</string>
    <string name="icon">icon</string>
    <string name="just_the_device_name">just the device name</string>
    <string name="isbutton">isbutton</string>
    <string name="obamium">obamium</string>
    <string name="dev">by elburg</string>
    <string name="testscreenfragment">TestscreenFragment</string>
    <string name="this_does_nothing_so_what_does_it_even_do">this does nothing so what does it even do?</string>
    <string name="whoisgod">pref_whoisgod</string>
    <string name="whoisgod2">pref_whoisgod</string>
    <string name="vla">com.qualcomm.ftccommon.ViewLogsActivity</string>
    <string name="vla2">com.qualcomm.ftccommon.ViewLogsActivity</string>
    <string name="rcsa">com.qualcomm.ftccommon.FtcAdvancedRCSettingsActivity</string>
    <string name="t000">true</string>
    <string name="NOTHING" translatable="false" />
    <string name="testscreen">com.qualcomm.ftccommon.testscreen</string>
    <string name="testscreen2">com.qualcomm.ftccommon.testscreen</string>
    <string name="NOTHING2" translatable="false" />
    <string name="NOTHING1" translatable="false" />
    <string name="NOTHING3" translatable="false" />
    <string name="NOTHING4" translatable="false" />
    <string name="NOTHING5" translatable="false" />
    <string name="NOTHING6" translatable="false" />
    <string name="title">Your Title</string>
    <integer-array name="app_theme_ids">
        <item>@style/AppThemeRedRC</item>
        <item>@style/AppThemeGreenRC</item>
        <item>@style/AppThemeBlueRC</item>
        <item>@style/AppThemePurpleRC</item>
        <item>@style/AppThemeOrangeRC</item>
        <item>@style/AppThemeTealRC</item>
    </integer-array>
</resources>
