<!--
Copyright (c) 2014, 2015 Qualcomm Technologies Inc

All rights reserved.

Redistribution and use in source and binary forms, with or without modification,
are permitted (subject to the limitations in the disclaimer below) provided that
the following conditions are met:

Redistributions of source code must retain the above copyright notice, this list
of conditions and the following disclaimer.

Redistributions in binary form must reproduce the above copyright notice, this
list of conditions and the following disclaimer in the documentation and/or
other materials provided with the distribution.

Neither the name of Qualcomm Technologies Inc nor the names of its contributors
may be used to endorse or promote products derived from this software without
specific prior written permission.

NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entire_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="org.firstinspires.ftc.robotcontroller.internal.FtcRobotControllerActivity">

  <!-- black bar on top -->
  <RelativeLayout
      android:id="@+id/top_bar"
      android:layout_width="fill_parent"
      android:layout_height="@dimen/layout_height000"
      android:background="@color/background_black">

    <ImageView
        android:id="@+id/robotIcon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginStart="@dimen/margenStart"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginBottom="@dimen/marginBottom"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon"
        android:src="@drawable/icon_robotcontroller" />

    <TextView
        android:id="@+id/textDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/robotIcon"
        android:contentDescription="@string/just_the_device_name"
        android:padding="@dimen/padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?attr/textWhite"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/menu_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/marginStart2"
        android:layout_marginTop="@dimen/marginTop2"
        android:layout_marginEnd="@dimen/marginEnd2"
        android:layout_marginBottom="@dimen/marginBottom2"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/isbutton"
        android:padding="@dimen/padding2"
        android:scaleType="fitXY"
        android:src="@drawable/icon_menu" />

  </RelativeLayout>
  <!-- end of black bar -->

  <include
      android:id="@+id/included_header"
      layout="@layout/header" />

  <RelativeLayout
      android:id="@+id/RelativeLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/background_very_light_grey"
      android:keepScreenOn="true"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textNetworkConnectionStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NOTHING2"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textRobotStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNetworkConnectionStatus"
        android:text="@string/NOTHING1"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textOpMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textRobotStatus"
        android:text="@string/NOTHING3"
        android:visibility="invisible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textGamepad1"
        android:layout_below="@+id/textOpMode">

      <LinearLayout
          android:id="@+id/monitorContainer"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cameraMonitorViewId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height001"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/tfodMonitorViewId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height002"
            android:layout_weight="1"
            android:visibility="gone" />

      </LinearLayout>

      <!-- When visible, the error message will overlay and thus partially
           obscure part of the camera monitor. We make this trade off so as to
           allow for a bigger camera monitor view in the common case when the
           error is not in fact present
        -->
      <TextView
          android:id="@+id/textErrorMessage"
          style="@style/FtcTextViewStyleBold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/NOTHING4"
          android:textColor="?attr/textMediumDark"
          android:visibility="invisible" />

    </FrameLayout>

    <TextView
        android:id="@+id/textGamepad1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textGamepad2"
        android:text="@string/NOTHING5"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textGamepad2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/NOTHING6"
        android:visibility="invisible" />

  </RelativeLayout>

  <WebView
      android:id="@+id/webViewBlocksRuntime"
      android:layout_width="@dimen/layout_width000"
      android:layout_height="@dimen/layout_width003" />

</LinearLayout>